added waiting time as a feature and remove enq time

--- a/ver 5.2/wat-out-big.ipynb
+++ b/ver 5.2/wat-out-big.ipynb
@@ -559,7 +559,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1d20bd03508>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x23078272388>"
       ]
      },
      "execution_count": 6,
@@ -591,7 +591,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1d20de579c8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2307835c188>"
       ]
      },
      "execution_count": 7,
@@ -623,7 +623,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1d20a50e288>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x23078455208>"
       ]
      },
      "execution_count": 8,
@@ -655,7 +655,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1d20df1c608>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x230785233c8>"
       ]
      },
      "execution_count": 9,
@@ -687,7 +687,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1d20e0a8a08>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x230785a4d48>"
       ]
      },
      "execution_count": 10,
@@ -719,7 +719,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1d20e155148>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x23078646648>"
       ]
      },
      "execution_count": 11,
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,9 +834,14 @@
     "hopcurrentarr = []\n",
     "hoptotarr = []\n",
     "hoppercentarr =[]\n",
+    "waitingarr = []\n",
     "interval = 500\n",
     "count = 0\n",
     "for index, row in df.iterrows():\n",
+    "    current_time = row[\"time\"]\n",
+    "    enqueue_time = row[\"enq_time\"]\n",
+    "    waiting_time = current_time - enqueue_time\n",
+    "    waitingarr.append(waiting_time)\n",
     "    current_router = row[\"router\"]\n",
     "    src_router = row[\"src_router\"]\n",
     "    dst_router = row[\"dst_router\"]\n",
@@ -887,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +901,7 @@
        "3408"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -907,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -941,23 +946,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = df.assign(pkt_chuck=packchunk)\n",
     "df = df.assign(hop_count=hoptotarr)\n",
     "df = df.assign(current_hop=hopcurrentarr)\n",
-    "df = df.assign(hop_percentage=hoppercentarr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['target'] = 0"
+    "df = df.assign(hop_percentage=hoppercentarr)\n",
+    "df = df.assign(waiting_time=waitingarr)"
    ]
   },
   {
@@ -966,7 +963,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop(columns=['packet_address'])"
+    "df = df.drop(columns=['packet_address','enq_time'])"
    ]
   },
   {
@@ -990,12 +987,11 @@
        "src_router        0\n",
        "dst_ni            0\n",
        "dst_router        0\n",
-       "enq_time          0\n",
        "pkt_chuck         0\n",
        "hop_count         0\n",
        "current_hop       0\n",
        "hop_percentage    0\n",
-       "target            0\n",
+       "waiting_time      0\n",
        "dtype: int64"
       ]
      },
@@ -1029,12 +1025,11 @@
        "src_router          int64\n",
        "dst_ni              int64\n",
        "dst_router          int64\n",
-       "enq_time            int64\n",
        "pkt_chuck           int64\n",
        "hop_count           int64\n",
        "current_hop         int64\n",
        "hop_percentage    float64\n",
-       "target              int64\n",
+       "waiting_time        int64\n",
        "dtype: object"
       ]
      },
@@ -1086,12 +1081,11 @@
        "      <th>src_router</th>\n",
        "      <th>dst_ni</th>\n",
        "      <th>dst_router</th>\n",
-       "      <th>enq_time</th>\n",
        "      <th>pkt_chuck</th>\n",
        "      <th>hop_count</th>\n",
        "      <th>current_hop</th>\n",
        "      <th>hop_percentage</th>\n",
-       "      <th>target</th>\n",
+       "      <th>waiting_time</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1110,12 +1104,11 @@
        "      <td>0</td>\n",
        "      <td>23</td>\n",
        "      <td>7</td>\n",
-       "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
@@ -1132,12 +1125,11 @@
        "      <td>1</td>\n",
        "      <td>23</td>\n",
        "      <td>7</td>\n",
-       "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
@@ -1154,12 +1146,11 @@
        "      <td>1</td>\n",
        "      <td>23</td>\n",
        "      <td>7</td>\n",
-       "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>0.333333</td>\n",
-       "      <td>0</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
@@ -1176,12 +1167,11 @@
        "      <td>0</td>\n",
        "      <td>23</td>\n",
        "      <td>7</td>\n",
-       "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
        "      <td>1</td>\n",
        "      <td>0.250000</td>\n",
-       "      <td>0</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
@@ -1198,12 +1188,11 @@
        "      <td>0</td>\n",
        "      <td>23</td>\n",
        "      <td>7</td>\n",
-       "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
        "      <td>2</td>\n",
        "      <td>0.500000</td>\n",
-       "      <td>0</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5</td>\n",
@@ -1220,12 +1209,11 @@
        "      <td>1</td>\n",
        "      <td>23</td>\n",
        "      <td>7</td>\n",
-       "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>0.666667</td>\n",
-       "      <td>0</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6</td>\n",
@@ -1242,12 +1230,11 @@
        "      <td>1</td>\n",
        "      <td>23</td>\n",
        "      <td>7</td>\n",
-       "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0</td>\n",
+       "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>7</td>\n",
@@ -1264,12 +1251,11 @@
        "      <td>0</td>\n",
        "      <td>23</td>\n",
        "      <td>7</td>\n",
-       "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
        "      <td>3</td>\n",
        "      <td>0.750000</td>\n",
-       "      <td>0</td>\n",
+       "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>8</td>\n",
@@ -1286,12 +1272,11 @@
        "      <td>0</td>\n",
        "      <td>23</td>\n",
        "      <td>7</td>\n",
-       "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0</td>\n",
+       "      <td>20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>9</td>\n",
@@ -1308,12 +1293,11 @@
        "      <td>7</td>\n",
        "      <td>18</td>\n",
        "      <td>2</td>\n",
-       "      <td>23</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1332,29 +1316,29 @@
        "8    23       7        0       3            0        0          3     2   9   \n",
        "9    27       7        4       0            1        0          3     2   8   \n",
        "\n",
-       "   src_ni  src_router  dst_ni  dst_router  enq_time  pkt_chuck  hop_count  \\\n",
-       "0       0           0      23           7         3          0          4   \n",
-       "1       1           1      23           7         3          1          3   \n",
-       "2       1           1      23           7         3          1          3   \n",
-       "3       0           0      23           7         3          0          4   \n",
-       "4       0           0      23           7         3          0          4   \n",
-       "5       1           1      23           7         3          1          3   \n",
-       "6       1           1      23           7         3          1          3   \n",
-       "7       0           0      23           7         3          0          4   \n",
-       "8       0           0      23           7         3          0          4   \n",
-       "9      23           7      18           2        23          1          2   \n",
+       "   src_ni  src_router  dst_ni  dst_router  pkt_chuck  hop_count  current_hop  \\\n",
+       "0       0           0      23           7          0          4            0   \n",
+       "1       1           1      23           7          1          3            0   \n",
+       "2       1           1      23           7          1          3            1   \n",
+       "3       0           0      23           7          0          4            1   \n",
+       "4       0           0      23           7          0          4            2   \n",
+       "5       1           1      23           7          1          3            2   \n",
+       "6       1           1      23           7          1          3            3   \n",
+       "7       0           0      23           7          0          4            3   \n",
+       "8       0           0      23           7          0          4            4   \n",
+       "9      23           7      18           2          1          2            0   \n",
        "\n",
-       "   current_hop  hop_percentage  target  \n",
-       "0            0        0.000000       0  \n",
-       "1            0        0.000000       0  \n",
-       "2            1        0.333333       0  \n",
-       "3            1        0.250000       0  \n",
-       "4            2        0.500000       0  \n",
-       "5            2        0.666667       0  \n",
-       "6            3        1.000000       0  \n",
-       "7            3        0.750000       0  \n",
-       "8            4        1.000000       0  \n",
-       "9            0        0.000000       0  "
+       "   hop_percentage  waiting_time  \n",
+       "0        0.000000             4  \n",
+       "1        0.000000             4  \n",
+       "2        0.333333             8  \n",
+       "3        0.250000             8  \n",
+       "4        0.500000            12  \n",
+       "5        0.666667            12  \n",
+       "6        1.000000            16  \n",
+       "7        0.750000            16  \n",
+       "8        1.000000            20  \n",
+       "9        0.000000             4  "
       ]
      },
      "execution_count": 25,
@@ -1368,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
