updated output of lrg

--- a/ver 5.2/wat-r1-model.ipynb
+++ b/ver 5.2/wat-r1-model.ipynb
@@ -4079,7 +4079,7 @@
     "plt.ylabel('True Positive Rate')\n",
     "plt.title('Receiver operating characteristic')\n",
     "plt.legend(loc=\"lower right\")\n",
-    "plt.savefig('Log_ROC')\n",
+    "plt.savefig('LOG_ROC')\n",
     "plt.show()"
    ]
   },
