--- a/ver 5.2/wat_r1_model-v1.ipynb
+++ b/ver 5.2/wat_r1_model-v1.ipynb
@@ -2893,6 +2893,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['outport', 'inport', 'packet_type', 'flit_id', 'flit_type', 'vnet',\n",
+       "       'vc', 'src_ni', 'src_router', 'dst_ni', 'dst_router', 'pkt_chuck',\n",
+       "       'hop_count', 'current_hop', 'hop_percentage', 'waiting_time',\n",
+       "       'pkt_count', 'pkt_count_inc', 'pkt_max', 'counting_index_pos',\n",
+       "       'counting_index_100', 'flit_detail'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_X.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [
