recognized correlated features

--- a/dos ver 5.2/visualizations/wat_r1_model_v2-Copy1.ipynb
+++ b/dos ver 5.2/visualizations/wat_r1_model_v2-Copy1.ipynb
@@ -2463,6 +2463,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_correlation(data, threshold=0.9):\n",
+    "    corr_mat = data.corr()\n",
+    "    corr_mat.loc[:, :] = np.tril(corr_mat, k=-1)\n",
+    "    already_in = set()\n",
+    "    result = []\n",
+    "    for col in corr_mat:\n",
+    "        perfect_corr = corr_mat[col][abs(corr_mat[col])> threshold].index.tolist()\n",
+    "        if perfect_corr and col not in already_in:\n",
+    "            already_in.update(set(perfect_corr))\n",
+    "            perfect_corr.append(col)\n",
+    "            result.append(perfect_corr)\n",
+    "    select_nested = [f[1:] for f in result]\n",
+    "    select_flat = [i for j in select_nested for i in j]\n",
+    "    return select_flat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['flit_index',\n",
+       " 'flit_id',\n",
+       " 'vnet_vc_index',\n",
+       " 'vnet_vc_cc_index',\n",
+       " 'vnet',\n",
+       " 'packet_count_index']"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "columns_to_drop = find_correlation(df.drop(columns=['target']))\n",
+    "columns_to_drop\n",
+    "#flit_index, flit_id, vnet_vc_index, vnet_vc_cc_index, vnet, packet_max_index"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
    "outputs": [
