--- a/dos results ver 1/dataset fetch/2-fft-malicious-n-0-3-m-1.ipynb
+++ b/dos results ver 1/dataset fetch/2-fft-malicious-n-0-3-m-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -164,6 +164,24 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <td>700544</td>\n",
+       "      <td>2490436</td>\n",
+       "      <td>0</td>\n",
+       "      <td>North</td>\n",
+       "      <td>East</td>\n",
+       "      <td>0x36f840</td>\n",
+       "      <td>PUTS</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2490428</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <td>700545</td>\n",
        "      <td>2490437</td>\n",
        "      <td>8</td>\n",
@@ -235,27 +253,9 @@
        "      <td>1</td>\n",
        "      <td>2490430</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <td>700549</td>\n",
-       "      <td>2490439</td>\n",
-       "      <td>1</td>\n",
-       "      <td>West</td>\n",
-       "      <td>Local</td>\n",
-       "      <td>0x36f840</td>\n",
-       "      <td>PUTS</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>9</td>\n",
-       "      <td>17</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2490428</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>700550 rows × 15 columns</p>\n",
+       "<p>700549 rows × 15 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -266,11 +266,11 @@
        "3            11       7   Local  South       0x1d9dc0        GETS        0   \n",
        "4            11       2    East   West        0xeddc0        GETS        0   \n",
        "...         ...     ...     ...    ...            ...         ...      ...   \n",
+       "700544  2490436       0   North   East       0x36f840        PUTS        0   \n",
        "700545  2490437       8    East  Local       0x32fe40        DATA        3   \n",
        "700546  2490438       8    East  Local       0x32fe40         GUX        0   \n",
        "700547  2490438       9   South   West       0x32fe40        DATA        0   \n",
        "700548  2490439       9   South   West       0x32fe40        DATA        1   \n",
-       "700549  2490439       1    West  Local       0x36f840        PUTS        1   \n",
        "\n",
        "        flit_type  vnet  vc  src_ni  src_router  dst_ni  dst_router  enq_time  \n",
        "0               3     2   8       0           0      23           7         3  \n",
@@ -279,29 +279,29 @@
        "3               3     2   8       3           3      23           7         3  \n",
        "4               3     2   8       1           1      23           7         3  \n",
        "...           ...   ...  ..     ...         ...     ...         ...       ...  \n",
+       "700544          0     2   8      17           1      20           4   2490428  \n",
        "700545          1     4  17      24           8       1           1   2490430  \n",
        "700546          3     2  11      24           8      25           9   2490430  \n",
        "700547          0     4  16      24           8       1           1   2490430  \n",
        "700548          1     4  16      24           8       1           1   2490430  \n",
-       "700549          1     2   9      17           1      20           4   2490428  \n",
        "\n",
-       "[700550 rows x 15 columns]"
+       "[700549 rows x 15 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#dataset\n",
-    "df = pd.read_csv('2-fft-malicious-n-0-3-m-1.csv',nrows=700550)\n",
+    "df = pd.read_csv('2-fft-malicious-n-0-3-m-1.csv',nrows=700549)\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,16 +336,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(700550, 15)"
+       "(700549, 15)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -396,45 +396,45 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>count</td>\n",
-       "      <td>7.005500e+05</td>\n",
-       "      <td>700550.000000</td>\n",
-       "      <td>700550.000000</td>\n",
-       "      <td>700550.000000</td>\n",
-       "      <td>700550.000000</td>\n",
-       "      <td>700550.000000</td>\n",
-       "      <td>700550.000000</td>\n",
-       "      <td>700550.000000</td>\n",
-       "      <td>700550.000000</td>\n",
-       "      <td>700550.000000</td>\n",
-       "      <td>7.005500e+05</td>\n",
+       "      <td>7.005490e+05</td>\n",
+       "      <td>700549.000000</td>\n",
+       "      <td>700549.000000</td>\n",
+       "      <td>700549.000000</td>\n",
+       "      <td>700549.000000</td>\n",
+       "      <td>700549.000000</td>\n",
+       "      <td>700549.000000</td>\n",
+       "      <td>700549.000000</td>\n",
+       "      <td>700549.000000</td>\n",
+       "      <td>700549.000000</td>\n",
+       "      <td>7.005490e+05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>mean</td>\n",
-       "      <td>1.216683e+06</td>\n",
-       "      <td>5.330776</td>\n",
-       "      <td>1.593788</td>\n",
-       "      <td>1.406192</td>\n",
+       "      <td>1.216681e+06</td>\n",
+       "      <td>5.330782</td>\n",
+       "      <td>1.593789</td>\n",
+       "      <td>1.406193</td>\n",
        "      <td>2.613978</td>\n",
-       "      <td>10.966481</td>\n",
-       "      <td>16.083507</td>\n",
-       "      <td>5.243659</td>\n",
-       "      <td>15.584304</td>\n",
-       "      <td>5.344898</td>\n",
-       "      <td>1.216662e+06</td>\n",
+       "      <td>10.966483</td>\n",
+       "      <td>16.083506</td>\n",
+       "      <td>5.243665</td>\n",
+       "      <td>15.584297</td>\n",
+       "      <td>5.344900</td>\n",
+       "      <td>1.216660e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>std</td>\n",
-       "      <td>8.340226e+05</td>\n",
+       "      <td>8.340218e+05</td>\n",
        "      <td>4.108859</td>\n",
-       "      <td>1.497062</td>\n",
+       "      <td>1.497063</td>\n",
        "      <td>0.982938</td>\n",
        "      <td>0.922490</td>\n",
-       "      <td>3.714760</td>\n",
-       "      <td>10.696725</td>\n",
+       "      <td>3.714761</td>\n",
+       "      <td>10.696733</td>\n",
        "      <td>4.241145</td>\n",
-       "      <td>11.173682</td>\n",
-       "      <td>4.484812</td>\n",
-       "      <td>8.340223e+05</td>\n",
+       "      <td>11.173689</td>\n",
+       "      <td>4.484815</td>\n",
+       "      <td>8.340215e+05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>min</td>\n",
@@ -452,7 +452,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>25%</td>\n",
-       "      <td>3.444952e+05</td>\n",
+       "      <td>3.444950e+05</td>\n",
        "      <td>2.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>1.000000</td>\n",
@@ -480,7 +480,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>75%</td>\n",
-       "      <td>1.863167e+06</td>\n",
+       "      <td>1.863166e+06</td>\n",
        "      <td>8.000000</td>\n",
        "      <td>3.000000</td>\n",
        "      <td>2.000000</td>\n",
@@ -512,19 +512,19 @@
       ],
       "text/plain": [
        "               time         router        flit_id      flit_type  \\\n",
-       "count  7.005500e+05  700550.000000  700550.000000  700550.000000   \n",
-       "mean   1.216683e+06       5.330776       1.593788       1.406192   \n",
-       "std    8.340226e+05       4.108859       1.497062       0.982938   \n",
+       "count  7.005490e+05  700549.000000  700549.000000  700549.000000   \n",
+       "mean   1.216681e+06       5.330782       1.593789       1.406193   \n",
+       "std    8.340218e+05       4.108859       1.497063       0.982938   \n",
        "min    7.000000e+00       0.000000       0.000000       0.000000   \n",
-       "25%    3.444952e+05       2.000000       0.000000       1.000000   \n",
+       "25%    3.444950e+05       2.000000       0.000000       1.000000   \n",
        "50%    1.361343e+06       5.000000       1.000000       1.000000   \n",
-       "75%    1.863167e+06       8.000000       3.000000       2.000000   \n",
+       "75%    1.863166e+06       8.000000       3.000000       2.000000   \n",
        "max    2.490439e+06      15.000000       4.000000       3.000000   \n",
        "\n",
        "                vnet             vc         src_ni     src_router  \\\n",
-       "count  700550.000000  700550.000000  700550.000000  700550.000000   \n",
-       "mean        2.613978      10.966481      16.083507       5.243659   \n",
-       "std         0.922490       3.714760      10.696725       4.241145   \n",
+       "count  700549.000000  700549.000000  700549.000000  700549.000000   \n",
+       "mean        2.613978      10.966483      16.083506       5.243665   \n",
+       "std         0.922490       3.714761      10.696733       4.241145   \n",
        "min         2.000000       8.000000       0.000000       0.000000   \n",
        "25%         2.000000       8.000000       3.000000       1.000000   \n",
        "50%         2.000000       9.000000      20.000000       4.000000   \n",
@@ -532,9 +532,9 @@
        "max         4.000000      19.000000      31.000000      15.000000   \n",
        "\n",
        "              dst_ni     dst_router      enq_time  \n",
-       "count  700550.000000  700550.000000  7.005500e+05  \n",
-       "mean       15.584304       5.344898  1.216662e+06  \n",
-       "std        11.173682       4.484812  8.340223e+05  \n",
+       "count  700549.000000  700549.000000  7.005490e+05  \n",
+       "mean       15.584297       5.344900  1.216660e+06  \n",
+       "std        11.173689       4.484815  8.340215e+05  \n",
        "min         0.000000       0.000000  3.000000e+00  \n",
        "25%         3.000000       1.000000  3.444820e+05  \n",
        "50%        20.000000       4.000000  1.361310e+06  \n",
@@ -542,7 +542,7 @@
        "max        31.000000      15.000000  2.490430e+06  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,16 +553,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x16b20709ec8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x16b28af0508>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -585,16 +585,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x16b28b1b188>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x16b28618848>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -617,16 +617,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x16b28b8bcc8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x16b286cecc8>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -649,16 +649,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x16b28c49588>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x16b2877bbc8>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -681,16 +681,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x16b28c52a08>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x16b2882ec48>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -713,16 +713,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x16b28dd6a88>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x16b288ed0c8>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
